# gfw_library

./: Cargo.toml  README.md  study.md
example/: GitGuide.md
obsidian/study/.obsidian/: appearance.json  workspace.json
obsidian/study/.obsidian/snippets/: page_width.css
obsidian/study/example/: Git Guide Manual.md  GitGuide.md  SSHviaProxy.md  Squid Configuration.md  proxy setting.md  proxy.md  sudo.md
obsidian/study/linux/: find file recursively.md  ufw.md  warp client.md
obsidian/study/notes/: Shadowsocks-Rust-Cloak.md  Shadowsocks-Rust-Debian.md  Shadowsocks-Rust-Installation.md  hobby.md
obsidian/study/notes/Linux/: Rime with IBus.md  vi-color-highlight.md
obsidian/study/notes/Rust/: SS-advanced-configurations.md  Shadowsocks-Rust-Debian.md  mystudy01.md  mystudy02.md
obsidian/study/rust/: Shadowsocks-Rust-Modify.md  mystudy02.md
obsidian/study/tips/: 20230620.md  20230720.md  20230802.md  20230804.md  20230908.md  20230915.md  20230916.md
src/: gfw_config.rs  gfw_decrypt.rs  gfw_encrypt.rs  gfw_proxy.rs  gfw_proxy_ss.rs  gfw_proxy_ssh2.rs  lib.rs  mynote001.md
src/service/: local.rs
study/: selfvsSelf.md
