[package]
name = "gfw_library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
build-time = "0.1.3"
bytes = "1.4.0"
clap = "4.3.11"
futures = "0.3.28"
json5 = "0.4.1"
openssl = "0.10.55"
serde = "1.0.171"
serde_derive = "1.0.171"
serde_json = "1.0.100"
sysexits = "0.6.1"
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }
